Fixed visibility of show_note component

--- a/src/style/components/restaurant_overview_display.scss
+++ b/src/style/components/restaurant_overview_display.scss
@@ -55,7 +55,7 @@
         .photos-link {
           position: absolute;
           color: #000;
-          z-index: 100;
+          z-index: 1;
           left: 0px;
           color: #fff;
           font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
