--- a/src/style/components/show_note.scss
+++ b/src/style/components/show_note.scss
@@ -1,6 +1,6 @@
 .note {
   position: relative;
-  z-index: 100;
+  z-index: 1;
 
   .res-basic-note {
     top: 138% !important;
