--- a/src/style/containers/restaurant_details.css
+++ b/src/style/containers/restaurant_details.css
@@ -607,7 +607,7 @@ body {
           .restaurant-details .restaurant-details-content .restaurant-overview-display .restaurant-top-content .main-img a .photos-link {
             position: absolute;
             color: #000;
-            z-index: 100;
+            z-index: 1;
             left: 0px;
             color: #fff;
             font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
